# DensePCE

./: .gitignore  BBkC  CMakeLists.txt  README_PREPROCESSING.md  ablation_readme.md  build.sh  build_integrated.sh  dense-pce-r1-gated.cpp  dense-pce-r1-m1.cpp  graph_pipeline.py  readme.md  run.sh  transgrh.pl
EBBkC/: WSL-Ubuntu-commands.txt  make_100.py  test20.py
EBBkC/Cohesive_subgraph_book/datasets/: edgelist2binary
EBBkC/dataset/facebook_100/: facebook_100.clean
EBBkC/dataset/test10/: test10.clean  test10.edges
EBBkC/dataset/test15/: test15.clean
EBBkC/dataset/test20/: test20.edges
EBBkC/src/: CMakeLists.txt  def.cpp  def.h  edge_oriented.cpp  edge_oriented.h  main.cpp  set_operation.cpp
EBBkC/src/truss/util/: util.h
EBBkC/src/truss/util/graph/: graph.cpp  graph.h
testGraph/bio-grid-human/: bio-grid-human.edges  bio-grid-human.grh
testGraph/email-EU/: email-EU.edges  email-EU.grh
testGraph/fpce_graph/: cliques_K2  cliques_K3  fpce_graph.edges  fpce_graph.grh
testGraph/gplus/: cliques_K6  gplus.edges  gplus.grh
testGraph/protein/: Protein.clean  Protein.edges  cliques_K2  cliques_K3  cliques_K4  cliques_K5  protein.grh
testGraph/tech/: tech.clean  tech.edges  tech.grh
